tabindex en testing pagina

--- a/menu.css
+++ b/menu.css
@@ -2,9 +2,9 @@
 header {
     background-color: var(--background-menu);
     position: fixed;
-    height: 100vh;
     top: 0;
     left: 0;
+    height: 100%;
     width: 100%;
     z-index: 100;
 
