--- a/specificity/specificity.css
+++ b/specificity/specificity.css
@@ -3,250 +3,6 @@ body {
     margin: 0;
 }
 
-/*START MENU*/
-
-/*de achtergrond*/
-/* header {
-    background-color: var(--background-menu);
-    position: fixed;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 100;
-
-    clip-path: circle(0rem at calc(100% - 2rem) calc(100% - 3rem));
-
-    transition: clip-path 0.5s ease-in-out;
-
-}
-
-
-.show-menu {
-    clip-path: circle(80%);
-
-}
-
-main > article section {
-    clip-path: circle(0rem at calc(100% - 2rem) calc(100% - 3rem));
-    transition: clip-path 0.5s ease-in-out;
-} */
-
-/* .show-hulp section {
-    clip-path: circle(80%); 
-}
-
-
-.menu li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: var(--border-radius-button);
-    width: 100%;
-}
-
-
-.kopje {
-    font-family: var(--font-poppins);
-    font-size: var(--body-text-paragraph);
-    color: var(--button-text-color);
-    font-weight: normal;
-    margin-top: .7em;
-    padding: 0;
-}
-
-.kopje:hover {
-    text-decoration: var(--underline-text-hover);
-}
-
-
-a:hover {
-    border: none;
-} */
-
-
-
-/* ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    align-items: center;
-    height: 100vh;
-    padding: 0 4rem;
-    column-gap: 1.5em;
-}
-
-
-@keyframes wobble {
-    0% { transform: rotate(0deg); }
-    15% { transform: rotate(5deg); }
-    30% { transform: rotate(-5deg); }
-    45% { transform: rotate(5deg); }
-    60% { transform: rotate(-5deg); }
-    100% { transform: rotate(0deg); }
-} */
-
-
-/*HOME*/
-
-/* .huis {
-
-    background-color: var(--home-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.home {
-    display: flex;
-    align-self: end;
-}
-
-.svg-home {
-    display: block;
-}
-
-.huis:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.huis.wobble {
-    animation: wobble 1s infinite;
-} */
-
-
-
-/*TESTING*/
-
-/* .testen {
-    background-color: var(--testing-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.testing {
-    display: flex;
-    align-self: end;
-}
-
-.svg-testing {
-    display: block;
-}
-
-.testen:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.testen.wobble {
-    animation: wobble 1s infinite;
-} */
-
-
-
-/*LESSONS*/
-
-/* .les {
-    background-color: var(--lessons-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.lessons-nav {
-    display: flex;
-    align-self: center;
-}
-
-.svg-lessons {
-    display: block;
-}
-
-.les:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.les.wobble {
-    animation: wobble 1s infinite;
-} */
-
-
-/*STATISTICS*/
-
-/* .doelen {
-    background-color: var(--statistics-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.statistics {
-    display: flex;
-    align-self: center;
-}
-
-.svg-statistics {
-    display: block;
-}
-
-.doelen:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.doelen.wobble {
-    animation: wobble 1s infinite;
-} */
-
-
-/*PROFILE*/
-
-/* .gebruiker {
-    background-color: var(--profile-color);
-    width: 5em;
-    height: 5em;
-    border-radius: var(--border-radius-button);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: transform 0.3s ease;
-}
-
-.profile {
-    display: flex;
-    align-self: start;
-}
-
-.svg-profile {
-    display: block;
-}
-
-.gebruiker:hover {
-    background: var(--background-gradient-all-buttons);
-}
-
-.gebruiker.wobble {
-    animation: wobble 1s infinite;
-} */
-
-
-/*EINDE MENU*/
-
 
 /*BEGIN VRAAGTEKEN*/
 
@@ -273,7 +29,8 @@ button.vraagteken:hover {
     border-radius: 50%;
 }
 
-article {
+
+.vraag-uitleg-werkt{
     display: none;
     /* background-color: var(--background-menu); */
     background-color: transparent;
