--- a/specificity/specificity.css
+++ b/specificity/specificity.css
@@ -31,12 +31,17 @@ button.vraagteken:hover {
 
 /*article*/
 article{
-    display: none;
-    /* background-color: var(--background-menu); */
+    /* display: none; */
     background-color: transparent;
     padding: 0;
     margin: 0;
     height: 100vh;
+    display: flex;
+    z-index: 10;
+    position: absolute;
+    clip-path: circle(0rem at calc(100% - 4rem) 4rem);
+    /*hoe groot de cirkel*/
+    transition: clip-path 0.5s ease-in-out;
 }
 
 section {
@@ -46,9 +51,8 @@ section {
 }
 
 .show-hulp {
-    display: flex;
-    z-index: 10;
-    position: absolute;
+    clip-path: circle(80%);
+
 }
 
 h2 {
@@ -64,6 +68,7 @@ p {
     padding-left: 2em;
     padding-right: 2em;
 }
+
 
 
 /*EINDE VRAAGTEKEN*/
